Making class scanner more compliant (#1303)
* Explicitly allowing reflection on existing illegal access cases.

* Addressing newInstance deprecation

* Trying to get naming pattern on test fixture respected in build errors.

---------

Co-authored-by: Michael McLawhorn <mclawhor@yahooinc.com>